refactor: change the text

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -27,7 +27,7 @@
             <img src="assets/01.jpg" alt="mem" />
           </div>
           <div class="bottom-block">
-            <h3>До дедлайна по musem оставался час...</h3>
+            <h3>Когда смотришь на CSS сына маминой подруги</h3>
           </div>
         </div>
 
@@ -36,7 +36,7 @@
             <img src="assets/02.jpg" alt="mem" />
           </div>
           <div class="bottom-block">
-            <h3>Перед тестом Media Queries и после</h3>
+            <h3>Заход на повторный курс RSS</h3>
           </div>
         </div>
 
@@ -45,7 +45,7 @@
             <img src="assets/03.jpg" alt="mem" />
           </div>
           <div class="bottom-block">
-            <h3>Сел за momentum, но тут пришел CSS Mem Slider</h3>
+            <h3>Писать слайдеры на CSS – это так прекрасно...</h3>
           </div>
         </div>
 
